Added top and bottom text fields and outlets

--- a/Meme.V1/Base.lproj/Main.storyboard
+++ b/Meme.V1/Base.lproj/Main.storyboard
@@ -54,28 +54,48 @@
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="C5C-3D-mXx">
                                 <rect key="frame" x="0.0" y="44" width="375" height="579"/>
                             </imageView>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="6Sa-OW-xvy">
+                                <rect key="frame" x="183.5" y="49" width="8" height="17"/>
+                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="0.0" colorSpace="calibratedRGB"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="vcv-d4-0pA">
+                                <rect key="frame" x="183.5" y="601" width="8" height="17"/>
+                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="0.0" colorSpace="calibratedRGB"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="C5C-3D-mXx" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="0ei-FB-jkq" userLabel="Image View.leading = View.leading"/>
+                            <constraint firstItem="Abt-59-K32" firstAttribute="top" secondItem="vcv-d4-0pA" secondAttribute="bottom" constant="5" id="0u2-Yd-LRQ"/>
                             <constraint firstItem="qmf-xK-8qj" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="7zI-WW-gZJ"/>
+                            <constraint firstItem="6Sa-OW-xvy" firstAttribute="top" secondItem="qmf-xK-8qj" secondAttribute="bottom" constant="5" id="8CB-YC-V6s"/>
                             <constraint firstItem="Abt-59-K32" firstAttribute="top" secondItem="C5C-3D-mXx" secondAttribute="bottom" id="8N3-RD-X7N"/>
                             <constraint firstItem="qmf-xK-8qj" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="Ehd-vG-zK2" userLabel="Nav Bar.trailing = View.trailing"/>
                             <constraint firstItem="qmf-xK-8qj" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="I1O-Aw-ZCv" userLabel="Nav Bar.leading = View.leading"/>
                             <constraint firstItem="C5C-3D-mXx" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="XHE-u9-zuQ" userLabel="Image View.trailing = View.trailing"/>
+                            <constraint firstItem="vcv-d4-0pA" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="YDh-v6-rl3"/>
                             <constraint firstItem="Abt-59-K32" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="c8R-0h-n1u" userLabel="Toolbar.leading = View.leading"/>
                             <constraint firstItem="Abt-59-K32" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="emu-Kv-v0b" userLabel="Toolbar.bottom = View.bottom"/>
+                            <constraint firstItem="6Sa-OW-xvy" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="g6K-GJ-Hg0"/>
                             <constraint firstItem="Abt-59-K32" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="lga-dR-eqS" userLabel="Toolbar.trailing = View.trailing"/>
                             <constraint firstItem="C5C-3D-mXx" firstAttribute="top" secondItem="qmf-xK-8qj" secondAttribute="bottom" id="nRK-Yb-Mf0"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <connections>
+                        <outlet property="bottomTextField" destination="vcv-d4-0pA" id="hPa-ab-via"/>
                         <outlet property="cameraButton" destination="JAs-xW-lxB" id="ok8-i7-iuy"/>
                         <outlet property="imageForMeme" destination="C5C-3D-mXx" id="MQu-Da-2MQ"/>
                         <outlet property="navBar" destination="qmf-xK-8qj" id="5ae-b5-Ise"/>
                         <outlet property="shareButton" destination="uif-2i-hXd" id="CAS-Yi-7ce"/>
                         <outlet property="toolbar" destination="Abt-59-K32" id="ZBC-hZ-gfN"/>
+                        <outlet property="topTextField" destination="6Sa-OW-xvy" id="nxs-i7-q5b"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
