--- a/Meme.V1/Base.lproj/Main.storyboard
+++ b/Meme.V1/Base.lproj/Main.storyboard
@@ -51,18 +51,18 @@
                                     </barButtonItem>
                                 </items>
                             </toolbar>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="C5C-3D-mXx">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="C5C-3D-mXx">
                                 <rect key="frame" x="0.0" y="44" width="375" height="579"/>
                             </imageView>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="6Sa-OW-xvy">
-                                <rect key="frame" x="183.5" y="49" width="8" height="17"/>
+                                <rect key="frame" x="183.5" y="89" width="8" height="17"/>
                                 <color key="backgroundColor" red="1" green="1" blue="1" alpha="0.0" colorSpace="calibratedRGB"/>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="allCharacters"/>
                             </textField>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="vcv-d4-0pA">
-                                <rect key="frame" x="183.5" y="601" width="8" height="17"/>
+                                <rect key="frame" x="183.5" y="561" width="8" height="17"/>
                                 <color key="backgroundColor" red="1" green="1" blue="1" alpha="0.0" colorSpace="calibratedRGB"/>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
@@ -72,9 +72,9 @@
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="C5C-3D-mXx" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="0ei-FB-jkq" userLabel="Image View.leading = View.leading"/>
-                            <constraint firstItem="Abt-59-K32" firstAttribute="top" secondItem="vcv-d4-0pA" secondAttribute="bottom" constant="5" id="0u2-Yd-LRQ"/>
+                            <constraint firstItem="Abt-59-K32" firstAttribute="top" secondItem="vcv-d4-0pA" secondAttribute="bottom" constant="45" id="0u2-Yd-LRQ" userLabel="Image View.bottom = Bottom Text Field.bottom + 5"/>
                             <constraint firstItem="qmf-xK-8qj" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="7zI-WW-gZJ"/>
-                            <constraint firstItem="6Sa-OW-xvy" firstAttribute="top" secondItem="qmf-xK-8qj" secondAttribute="bottom" constant="5" id="8CB-YC-V6s"/>
+                            <constraint firstItem="6Sa-OW-xvy" firstAttribute="top" secondItem="qmf-xK-8qj" secondAttribute="bottom" constant="45" id="8CB-YC-V6s" userLabel="Top Text Field.top = Image View.top + 5"/>
                             <constraint firstItem="Abt-59-K32" firstAttribute="top" secondItem="C5C-3D-mXx" secondAttribute="bottom" id="8N3-RD-X7N"/>
                             <constraint firstItem="qmf-xK-8qj" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="Ehd-vG-zK2" userLabel="Nav Bar.trailing = View.trailing"/>
                             <constraint firstItem="qmf-xK-8qj" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="I1O-Aw-ZCv" userLabel="Nav Bar.leading = View.leading"/>
